--- a/數據綁定.html
+++ b/數據綁定.html
@@ -1,7 +1,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/vue/1.0.26/vue.min.js'></script>
 <html>
     <div id="app">
-        <span v-bind:id="'id-'+id" v-once>Hello {{ name}}</span>
+        <span v-bind:id="'id-'+id" v-once>Hello {{ name　| uppercase}}</span>
     </div>
 </html>
 <script type="text/javascript">
